Added strong password policy and support for DE, ES, FR languages

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -101,5 +101,6 @@
     "cancelAndLogout": "Cancel and Log Out",
 
     "designedBy": "Designed by Vaulty Team",
-    "defaultUser": "User"
+    "defaultUser": "User",
+    "passwordConstraintError": "Password must be at least 8 characters long and include uppercase, lowercase, number, and symbol."
 }
