--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -95,5 +95,6 @@
     "cancelAndLogout": "Vazgeç ve Çıkış Yap",
     
     "designedBy": "Vaulty Ekibi Tarafından Tasarlandı",
-    "defaultUser": "Kullanıcı"
+    "defaultUser": "Kullanıcı",
+    "passwordConstraintError": "Şifre en az 8 karakter olmalı; büyük harf, küçük harf, rakam ve sembol içermelidir."
 }
